2008-11-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/mb/hd-desktop.c (get_current_theme): Add function to get current
	  theme.
	  (hd_desktop_theme_change): On theme change update gconf background
	  image keys according to the backgrounds/*.desktop file of the new
	  theme.

2008-11-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-applet-manager.c (items_configuration_loaded_cb): Add
	  internationalization support.

2008-10-31  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/control:
	* debian/hildon-desktop.postinst: Fix lintian issues.

2008-10-31  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Release 2.2.4.

	* debian/control: Update requirements.

2008-10-30  Jan Arne Petersen  <jpetersen@openismus.com>

	Implement Add Applet dialog. Fixes NB#88341.

	* configure.ac: Require hildon-1 and libhildondesktop-1.

	* debian/control: Require libhildon1-dev and libhildondesktop1-dev.

	* src/home/Makefile.am: Add new files to sources.

	* src/home/hd-add-applet-dialog.c:
	* src/home/hd-add-applet-dialog.h: Implement the "Add Applet" dialog.

	* src/home/hd-applet-manager.c:
	* src/home/hd-applet-manager.h: Implement an applet manager used by
	the "Add Applet" dialog.

	* src/home/hd-edit-menu.c (hd_edit_menu_item_release): Add support
	for the "Add Applet" dialog.

	* src/home/hd-home.c (hd_home_applet_close_button_clicked): Remove
	applets if they are closed.

	* src/launcher/hd-app-launcher.c (hd_app_launcher_load_from_keyfile):
	Do not try to strchomp NULL strings.

	* src/main.c (main): Initialize GnomeVFS.

2008-10-30  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Improved switcher/launcher button managing logic.
	Fixes: NB#88359

	* src/home/hd-switcher.c (hd_switcher_clicked,
	  hd_switcher_setup_buttons): Changed logic so it hides both buttons when
	  the launcher is shown. Now it also shows the launcher button when in
	  switcher mode.
